feat: accommodation poll booking workflow, amenity model, and UI redesign (Iteration 15)
Replaces the direct confirm flow with a two-step booking workflow
(select → AWAITING_BOOKING → book/fail → BOOKED/OPEN), adds structured
Amenity enum replacing free-text features, and redesigns the poll UI with
KPI strip, amenity chips, collapsible failed-booking section, and leading
bar emphasis.

S15-A: Amenity enum (13 values), CandidateRoom.features→bedDescription,
       AccommodationCandidate gains Set<Amenity>, Flyway V23
S15-B: AccommodationPoll.select()/recordBookingSuccess(), AWAITING_BOOKING
       and BOOKED states, SelectAccommodationCandidateCommand
S15-C: AccommodationPoll.recordBookingFailure() with note, reopens poll,
       collapsible failure history in UI
S15-D: Amenity checkbox grid in forms, amenity chips in candidate cards,
       leading bar emphasis, booking panel visible in AWAITING_BOOKING

555 unit/integration tests, 285 E2E/BDD tests (252 green, 33 @manuell)

Co-Authored-By: Claude <noreply@anthropic.com>